# AbstractionLayer-Linux

./: .gitignore  .project  CHANGELOG.md  README.md  configuration.xml  module.ivy  module.properties
gradle/: libs.versions.toml
projects/microej/: CMakeLists.txt  README.rst  cco_async_select.properties  cco_fs-posix.properties  cco_mjvm-posix.properties  cco_net-linux.properties  cco_net-ssl-openssl.properties  cco_security-openssl.properties  options.cmake
projects/microej/core/inc/: LLDEVICE_linux_configuration.h  microej_main.h  posix_time.h
projects/microej/core/src/: LLDEVICE_linux.c  core_validation.c  microej_main.c  microej_main_linux.c  posix_time.c  posix_timer.c  sighandler.c
projects/microej/fs/: CMakeLists.txt
projects/microej/fs/inc/: fs_configuration.h  fs_helper_posix_configuration.h
projects/microej/fs/src/: LLFS_Unix_impl.c  LLFS_impl.c  fs_helper_posix.c
projects/microej/kf/: CMakeLists.txt
projects/microej/kf/inc/: LLKERNEL_Malloc.h
projects/microej/kf/src/: LLKERNEL_Malloc.c
projects/microej/net/: CMakeLists.txt
projects/microej/net/inc/: LLNET_Common.h  LLNET_configuration.h  async_select.h  async_select_configuration.h
projects/microej/net/src/: LLNET_CHANNEL_bsd.c  LLNET_Common.c  LLNET_DATAGRAMSOCKETCHANNEL_bsd.c  LLNET_DNS_native_linux.c  LLNET_MULTICASTSOCKETCHANNEL_bsd.c  LLNET_NETWORKADDRESS_bsd.c  LLNET_NETWORKINTERFACE_linux.c  LLNET_SOCKETCHANNEL_bsd.c  LLNET_STREAMSOCKETCHANNEL_bsd.c  async_select.c  async_select_cache.c  async_select_osal.c
projects/microej/platform/inc/: LLDW_PAINTER_impl.h  LLKERNEL_impl.h  LLMJVM.h  LLUI_DISPLAY.h  LLUI_DISPLAY_impl.h  LLUI_DISPLAY_types.h  LLUI_INPUT.h  LLUI_INPUT_impl.h  LLUI_LED_impl.h  LLUI_PAINTER_impl.h  dw_drawing_soft.h  ui_drawing_soft.h  ui_rect.h
projects/microej/platform/inc/intern/: LLKERNEL_impl.h
projects/microej/scripts/: build.bat  build.sh  debug.sh  run.bat  run.sh  runKernelWithFeatures.sh  set_local_env.sh
projects/microej/security/: CMakeLists.txt
projects/microej/security/inc/: LLSEC_configuration.h  LLSEC_openssl.h
projects/microej/security/src/: LLSEC_CIPHER_openssl.c  LLSEC_DIGEST_openssl.c  LLSEC_KEY_FACTORY_openssl.c  LLSEC_MAC_openssl.c  LLSEC_RANDOM_openssl.c  LLSEC_SIG_openssl.c  LLSEC_X509_openssl.c  OPENSSL_SECURITY_utils.c
projects/microej/ssl/inc/: LLNET_SSL_SOCKET_openssl.h  LLNET_SSL_cookie.h  LLNET_SSL_util.h  LLNET_SSL_verifyCallback.h
projects/microej/ssl/src/: LLNET_SSL_CONTEXT_impl.c  LLNET_SSL_ERRORS.c  LLNET_SSL_SOCKET_impl.c  LLNET_SSL_cookie.c  LLNET_SSL_util.c  LLNET_SSL_verifyCallback.c
projects/microej/trace/: CMakeLists.txt  config_control_flow.yaml
projects/microej/trace/inc/: barectf-bitfield.h  barectf.h
projects/microej/trace/src/: barectf-platform-linux-fs.c  barectf.c
projects/microej/ui/: CMakeLists.txt
projects/microej/ui/inc/: LLDISPLAY_FB.h  LLDISPLAY_FB_fbdev.h  framerate_impl.h  microui_event_decoder.h  microui_event_decoder_conf.h  microui_heap.h  touch_helper.h
projects/microej/ui/src/: LLDISPLAY_FB.c  LLDISPLAY_FB_fbdev.c  LLDW_PAINTER_impl.c  LLINPUT.c  LLUI_DISPLAY_HEAP_impl.c  LLUI_INPUT_LOG_impl.c  LLUI_LED_stub.c  LLUI_PAINTER_impl.c  framerate.c  microui_event_decoder.c  touch_helper.c  touch_manager.c
projects/microej/util/inc/: bsp_util.h  microej_async_worker.h  osal.h  osal_portmacro.h
projects/microej/validation/tests/llkernel/c/: CMakeLists.txt
projects/microej/validation/tests/llkernel/c/inc/: t_llkernel.h
projects/microej/validation/tests/llkernel/c/src/: t_llkernel.c  t_llkernel_main.c
vee/: CMakeLists.txt
vee/inc/: LLDEVICE_impl.h  LLDW_PAINTER_impl.h  LLFS_Unix_impl.h  LLMJVM.h  LLUI_DISPLAY.h  LLUI_DISPLAY_impl.h  LLUI_DISPLAY_types.h  LLUI_INPUT_impl.h  LLUI_LED_impl.h  LLUI_PAINTER_impl.h  ui_rect.h
vee/inc/intern/: LLBSP_impl.h  LLDEVICE_impl.h  LLFS_Unix_impl.h  LLKERNEL_impl.h  LLMJVM.h  LLTRACE_intern.h
vee/port/: cco_bsp-microej-async-worker.properties  cco_bsp-microej-main.properties  cco_ecom-network-generic.properties  cco_fs-posix.properties  cco_kernel-malloc.properties  cco_main-linux.properties  cco_net-bsd.properties  cco_net-linux.properties  cco_security-openssl.properties
vee/port/core/: CMakeLists.txt
vee/port/ecom-network/: CMakeLists.txt
vee/scripts/: build.bat  build.sh  debug.bat  debug.gdb  run.bat  run.sh  runKernelWithFeatures.gdb  set_local_env.bat  set_project_env.bat
(+99 files in other folders)
